# Matrix-Chain

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt  requirements.txt
benchmark/: CMakeLists.txt  bench.cpp
benchmark/data/: test3.in
includes/: matrix.hpp  matrix_chain.hpp
src/: driver.cpp
tests/e2e_tests/: CMakeLists.txt  gen.py  test.sh
tests/e2e_tests/data/: test1.in  test2.in  test3.in  test3.out  test4.in  test4.out  test5.in  test6.in  test7.in  test7.out
tests/unit_tests/: CMakeLists.txt  chain_tests.cpp  matrix.cpp  test.cpp
